--- a/index.html
+++ b/index.html
@@ -1,34 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> <!--ensures the language presented on the webpage is english-->
 
-<head>
+<head> 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-
+  
+<style>
+ h1{
+  color:darkblue;
+}
+  h2{
+    color:darkblue;
+  }
+  p{
+    color:darkblue;
+  }
+  h3{
+    color:darkblue;
+  }
+  footer{
+    color:darkblue;
+  }
+  img{
+   display: block;
+   margin-left: auto; 
+   margin-right: auto;
+  } </style>
+  
 <body>
   <main>
   <h1>Hello world!</h1>
   <script src="script.js"></script>
     <article>
-  <h2> My name is Precious. </h2> <!-- Who you are -->
-  <img src="beans.jpg" alt="Profile picture of 'beans'">
+  <h2> My name is Precious and I'm from Atlanta,GA! </h2> 
+ <!--profile image-->     
+<img src="me beach.jpg" alt="Photo of me in a hat at the beach.">
+ 
   <hr>
-    
-  <p> I am a former executive Chef in Atlanta,GA. I am excited to become a fullstack software engineer so that I can
-    help make the world a better place through new and exciting tech! 🤓 </p> <!-- Where you are located -->
+   <!--Tell us a little about yourself and how you work well with others:)-->  
+  <p> I am a former executive Chef and am excited to become a fullstack software engineer! My work in busy kitchens full of different folks with a multitude of langugaes and communication skills has breed the perfect foundation within me to get along and work well with alsmot anyone! I am so excited to jump into this new field to work with other like minded individuals so that we can help make the world a better place with our fun and exciting new tech! 🤓 </p>
   <p> I am a lover of food, art, and culture. I hope to travel the world sharing stories and making memories :) </p>
       </article>
-  <!-- description that shows your passion for web development and your willingness to work with others One or two sentences that describe other interests you have outside of web development-->
+  
   <h3>Contact: </h3>
   
-  <ol>
+  <ul>
     <li><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile">
         linkdin profile</a></li>
     <li><a href="https://github.com/preciousdoug">github profile</a> </li>
-  </ol>
+  </ul>
   </main>
 
 <footer> Thanks for viewing my first html page! :) </footer>
