Added comments, added a new photo and moved all content to the center :)

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <h1>Hello world!</h1>
   <script src="script.js"></script>
     <article>
+<!--introduction-->
   <h2> My name is Precious and I'm from Atlanta,GA! </h2> 
  <!--profile image-->     
 <img src="me beach.jpg" alt="Photo of me in a hat at the beach.">
@@ -44,7 +45,7 @@
   <p> I am a former executive Chef and am excited to become a fullstack software engineer! My work in busy kitchens full of different folks with a multitude of langugaes and communication skills has breed the perfect foundation within me to get along and work well with alsmot anyone! I am so excited to jump into this new field to work with other like minded individuals so that we can help make the world a better place with our fun and exciting new tech! 🤓 </p>
   <p> I am a lover of food, art, and culture. I hope to travel the world sharing stories and making memories :) </p>
       </article>
-  
+<!--contact info-->
   <h3>Contact: </h3>
   
   <ul>
