renamed the jpg to eliminate a "space"

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <!--introduction-->
   <h2> My name is Precious and I'm from Atlanta,GA! </h2> 
  <!--profile image-->     
-<img src="me beach.jpg" alt="Photo of me in a hat at the beach.">
+<img src="meatthebeach.jpg" alt="Photo of me in a hat at the beach.">
  
   <hr>
    <!--Tell us a little about yourself and how you work well with others:)-->  
